tests/type-check/bad/maker-for-non-object.arr
a :: Number = 1
b = [a: "hello"]